...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="Contacts"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/button"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="281dp"
        android:layout_marginRight="40dp"
        android:onClick="saveContact"
...
